# dioxus-sample

./: .gitignore  Cargo.toml  Makefile
front/: Cargo.toml  Dioxus.toml  package-lock.json  tailwind.config.js
front/public/: tailwind.css
front/src/: lib.rs  main.rs
public/: tailwind.css
scripts/: start_web.sh
src/: main.rs
