[package]
name = "dioxus-sample"
version = "0.1.0"
authors = ["Sunaga0709 <ts19980709@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
