[package]
name = "front"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "web"
path = "src/main.rs"

[dependencies]

dioxus = { version = "0.5", features = ["web", "hot-reload"] }

# Debug
dioxus-logger = "0.5.1"
manganis = "0.2.2"
